<resources>
    <string name="app_name" translatable="false">Price List</string>
    <string name="listButtonText">Переглянути прайс</string>
    <string name="updatePriceText">Оновити прайс</string>
    <string name="updateButtonText">Оновити</string>
    <string name="linkTextEditHint">Назва файлу</string>
    <string name="toastLinkEmptyText">Текстове поле порожнє</string>
    <string name="toastWrongLinkText">Вибачте, посилання не правильне!</string>
    <string name="toastUnkownOrNoInternetText">Вибачте, відстунє підключення до серверу!</string>
    <string name="toastDownloadSuccesful">Початок завантаження!</string>
    <string name="toastReadingFileText">Увага! Зчитуємо великий файл!</string>
    <string name="buttonTextOpenDetails">Відкрити повністю</string>
    <string name="toastOutOfMemory">Out of memory</string>
    <string name="updateTokenText">Оновити токен</string>
    <string name="token">Токен</string>
    <string name="openLinkButton">Відкрити посилання</string>
    <string name="errorText">Вибачте, виникла помилка!</string>
    <string name="successUpdatedTokenText">Токен успішно оновлено!</string>
    <string name="tokenRequiredText">Потрібен токен!</string>
    <string name="changeSizeText">Змінити параметри</string>
    <string name="fontPreferencesText">Розмір шрифту</string>
    <string name="imagePreferencesTextH">Висота картинки</string>
    <string name="cardFullPreferencesText">Розміри повної картки</string>
    <string name="delayOfViewPager">Затримка перелистування</string>
    <string name="passPrefText">Пароль налаштувань</string>
    <string name="enterPassText">Введіть пароль</string>
    <string name="toFirstText">На першу сторінку</string>
    <string name="toLastText">На останню сторінку</string>
    <string name="imagePreferencesTextW">Ширина картинки</string>
    <string name="toastWrongPassword">Не вірний пароль!</string>
    <string name="groupModeButtonText">Режим груп</string>
    <string name="seeAllButtonText">Переглянути всі</string>
    <string name="cardPreviewPrecerencesTextW">Ширина малої картки</string>
    <string name="cardPreviewPrecerencesTextH">Висота малої картки</string>
    <string name="passPrefTextChange">Пароль зміни товарів</string>
    <string name="passPrefTextGroups">Пароль зміни груп</string>
    <string name="marginsOfCardsPrefsText">Відступи між картками</string>
    <string name="accessGranted">Дякую!</string>
    <string name="downloadImagesButton">Завантажити картинки</string>
    <string name="updateFilesText">Оновити файли</string>
    <string name="prefTextMarginTop">Відступ назви зверху</string>
    <string name="prefTextMarginBottom">Відступ назви знизу</string>
    <string name="prefCountTextMarginTop">Відступ кількості зверху</string>
    <string name="prefCountTextMarginBottom">Відступ кількості знизу</string>
    <string name="priceUpdatedText">Прайс оновлено!</string>
    <string name="downloadPromotions">Завантажити акції</string>
    <string name="downloadVideos">Завантажити відео</string>
    <string name="downloadGifs">Завантажити гіфки</string>
    <string name="updateAppButton">Оновити додаток</string>

</resources>