<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/fontPreferencesText"
        android:key="fontSize" />

    <EditTextPreference
        android:title="@string/imagePreferencesTextH"
        android:key="imageSizeH" />

    <EditTextPreference
        android:title="@string/imagePreferencesTextW"
        android:key="imageSizeW" />

    <EditTextPreference
        android:title="@string/cardPreviewPrecerencesTextW"
        android:key="cardPreviewSizeW" />

    <EditTextPreference
        android:title="@string/cardPreviewPrecerencesTextH"
        android:key="cardPreviewSizeH" />

    <EditTextPreference
        android:title="@string/cardFullPreferencesText"
        android:key="cardFullSize" />

    <EditTextPreference
        android:title="@string/passPrefText"
        android:key="pass" />

    <EditTextPreference
        android:title="@string/delayOfViewPager"
        android:key="delayOfViewPager" />

</PreferenceScreen>