<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DownloadActivity"
    android:background="@color/someColor">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/marmelad"
        android:text="@string/updateFilesText"
        android:textColor="@color/white"
        android:textSize="50dp"

        app:layout_constraintBottom_toTopOf="@id/updatePriceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updatePriceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/MyButton"
        android:text="@string/updatePriceText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloText"
        app:layout_constraintBottom_toTopOf="@id/downloadImagesButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadImagesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/MyButton"
        android:text="@string/downloadImagesButton"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updatePriceButton"
        app:layout_constraintBottom_toTopOf="@id/progressBar" />

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/marmelad"
        android:text="1%"
        android:textColor="@color/white"
        android:textSize="15dp"

        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintRight_toRightOf="@id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:max="100"
        android:progress="1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadImagesButton"
        app:layout_constraintBottom_toTopOf="@id/downloadPromotions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadPromotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/MyButton"
        android:text="Завантажити акції"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintBottom_toTopOf="@id/downloadVideos" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadVideos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/MyButton"
        android:text="Завантажити відео"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadPromotions"
        app:layout_constraintBottom_toTopOf="@id/downloadAll" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadAll"
        android:layout_width="350dp"
        android:layout_height="125dp"

        style="@style/MyButton"
        android:text="Завантажити все"
        android:textSize="40dp"
        app:cornerRadius="20dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadVideos"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>